objects/STMTaskChild__c.object
<CustomObject>
    <fields>
        <fullName>Alert_Reminder_User1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alert Reminder User1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskChilds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alert_Reminder_User2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alert Reminder User2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskChilds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alert_Reminder_User3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alert Reminder User3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskChilds45Iv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee_Esc_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee Esc 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskChilds2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee_Esc_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee Esc 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskChilds3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee_Esc_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee Esc 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskChilds45FS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CE_Esc_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CE Esc 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskChilds8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CE_Esc_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CE Esc 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskChilds9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CE_Esc_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CE Esc 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskChilds45IC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Esc_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Esc 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskChilds6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Esc_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Esc 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskChilds7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Esc_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Esc 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskChilds45Fx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>STMTask__c</fullName>
        <label>STM Task</label>
        <referenceTo>STMTask__c</referenceTo>
        <relationshipLabel>STM Task Childs</relationshipLabel>
        <relationshipName>STM_Task_Childs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Supervisor_Esc_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor Esc 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskChilds4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisor_Esc_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor Esc 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskChilds5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisor_Esc_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor Esc 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TaskChilds45GL</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>STM Task Child</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>STMTaskChild-{00000}</displayFormat>
        <label>STM Task Child Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>STM Task Childs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>